Funcionan todos los tipos de perforaciones, excepto las esquinas